added cliente service

--- a/src/GTI.CADASTRO.WEB/AppSettings.config
+++ b/src/GTI.CADASTRO.WEB/AppSettings.config
@@ -6,4 +6,8 @@
 	<add key="ClientValidationEnabled" value="true" />
 	<add key="UnobtrusiveJavaScriptEnabled" value="true" />
 	
+	
+	<!--api-->
+	<add key="Api" value="https://teste"/>
+	
 </appSettings>
