--- a/src/GTI.CADASTRO.BUSINESSLOGIC/packages.config
+++ b/src/GTI.CADASTRO.BUSINESSLOGIC/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net451" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net451" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net451" />
+  <package id="Newtonsoft.Json" version="13.0.2" targetFramework="net451" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net451" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.2" targetFramework="net451" />
   <package id="Unity.Abstractions" version="5.11.1" targetFramework="net451" />
